- Updated make_main_tank_page to set the title of the page properly. - Updated master.html to have link to source code - Updated tank pages with the latest tanks

--- a/wot_scraper/templates/master.html
+++ b/wot_scraper/templates/master.html
@@ -17,7 +17,7 @@
 	<body>
 		<header>
 			<h1>dpg whores<sub id="beta">BETA</sub></h1>
-			<span id="last_update">Last update: 28 Sept 19:00 EST</span>
+			<span id="last_update">Last update: 09 Feb 10:29 EST</span>
 		</header>
 		
 		{% set navigation_bar = [
@@ -37,6 +37,7 @@
 			{% endfor %}
 			</ul>
 		</nav>
+		
 		{% block body %}{% endblock %}
 		
 		
@@ -47,6 +48,10 @@
 				<a id="license_img" rel="license" href="https://creativecommons.org/licenses/by/4.0/" title="Creative Commons Attribution 4.0 International license"><img src="https://licensebuttons.net/l/by/4.0/88x31.png" alt="License"/></a> 
 				
 				Except where otherwise noted, content on this site is licensed under a Creative Commons Attribution 4.0 International license.
+
+				<br />
+				<br />
+				Source available on <a href="https://github.com/lordrecneps/wot_stats">GitHub</a>.
 			</div>
 		</footer>
 	</body>
