--- a/wot_scraper/templates/master.html
+++ b/wot_scraper/templates/master.html
@@ -24,7 +24,8 @@
 			('/', 'index', 'Home'),
 			('/tanks/', 'tanks', 'Tank ranking'),
 			('/players/', 'players', 'Players'),
-			('/about/', 'about', 'About')
+			('/about/', 'about', 'About'),
+			('/report/', 'report', 'Report a problem')
 		] -%}
 		{% set active_page = active_page|default('index') -%}
 		
