--- a/wot_scraper/templates/players.html
+++ b/wot_scraper/templates/players.html
@@ -3,85 +3,86 @@
 {% block title %}{{player_name|default('Players')}}{% endblock %}
 
 {% block body %}
-		<section>
-			<h2>{{player_name|default('Player')}} stats</h2>
-			<br />
-			<form action="" method="get">
-				<label for='player_name'>Type in a player's name:&nbsp;&nbsp;</label><input type='text' name='player_name' />
-				<input type='submit' value="Find" />
-			</form>
-			<br />
-			{% if not player_id == 0 %}
-			
-			<h3>Top 50 entries (by {{stat_version|default('DPG, 150 battles')}}):</h3>
-			<br />
-			Version: <a href="./?player_name={{player_name}}">150 battles DPG</a> |
-			<a href="?player_name={{player_name}}&v=100">100 battles DPG</a> |
-			<a href="?player_name={{player_name}}&v=recent">Recent DPG</a> |
-			<a href="./?player_name={{player_name}}&v=150wr">150 battles W/R</a> |
-			<a href="?player_name={{player_name}}&v=100wr">100 battles W/R</a> |
-			<a href="?player_name={{player_name}}&v=recentwr">Recent W/R</a>
-			<br />
-			<table id="top50_table">
-				<thead>
-					<tr>
-						<th data-tsorter="numeric">#</th>
-						<th data-tsorter="link">Tank</th>
-						<th data-tsorter="numeric">Tier</th>
-						<th data-tsorter="numeric">Battles</th>
-						<th data-tsorter="numeric">DPG</th>
-						<th data-tsorter="numeric">FPG</th>
-						<th data-tsorter="numeric">W/R</th>
-						<th data-tsorter="numeric">Recent<br />Battles</th>
-						<th data-tsorter="numeric">Recent<br />DPG</th>
-						<th data-tsorter="numeric">Recent<br />W/R</th>
-					</tr>
-				</thead>
-				<tbody>
-				{{top50_stats|safe}}
-				</tbody>
-			</table>
-			{% else %}
-			{{top50_stats|safe}}
-			{% endif %}
-			
-			{% set player_id = player_id|default(0) -%}
-			
-			{% if not player_id == 0 %}
-			<script src="{{ url_for('static', filename='tank_info.js')}}"></script>
-			<script src="{{ url_for('static', filename='tsorter.min.js')}}" type="text/javascript"></script>
-			<script>
-				function table_sort_init() {
-					var table_sorter = tsorter.create('tank_stats');
-					var top50_sorter = tsorter.create('top50_table');
-				}
-				
-				window.onload = table_sort_init;
-			</script>
-			<br />
-			
-			<h3>Tanks with 50 or more battles:</h3>
-			<br />
-			
-			<table id="tank_stats">
-				<thead>
-					<tr>
-						<th data-tsorter="link">Tank</th>
-						<th data-tsorter="numeric">Tier</th>
-						<th data-tsorter="numeric">Battles</th>
-						<th data-tsorter="numeric">DPG</th>
-						<th data-tsorter="numeric">FPG</th>
-						<th data-tsorter="numeric">W/R</th>
-						<th data-tsorter="numeric">DPG %</th>
-						<th data-tsorter="numeric">Recent<br />Battles</th>
-						<th data-tsorter="numeric">Recent<br />DPG</th>
-						<th data-tsorter="numeric">Recent<br />W/R</th>
-					</tr>
-				</thead>
-				<tbody>
-				{{player_stats|safe}}
-				</tbody>
-			</table>
-			{% endif %}
-		</section>
+    <section>
+      <h2>{{player_name|default('Player')}} stats</h2>
+      <br />
+      <form action="" method="get">
+        <label for='player_name'>Type in a player's name:&nbsp;&nbsp;</label><input type='text' name='player_name' />
+        <input type='submit' value="Find" />
+				<input type="hidden" name="server" value="{{server}}">
+      </form>
+      <br />
+      {% if not player_id == 0 %}
+
+      <h3>Top 50 entries (by {{stat_version|default('DPG, 150 battles')}}):</h3>
+      <br />
+      Version: <a href="./?player_name={{player_name}}&server={{server}}">150 battles DPG</a> |
+      <a href="?player_name={{player_name}}&v=100&server={{server}}">100 battles DPG</a> |
+      <a href="?player_name={{player_name}}&v=recent&server={{server}}">Recent DPG</a> |
+      <a href="./?player_name={{player_name}}&v=150wr&server={{server}}">150 battles W/R</a> |
+      <a href="?player_name={{player_name}}&v=100wr&server={{server}}">100 battles W/R</a> |
+      <a href="?player_name={{player_name}}&v=recentwr&server={{server}}">Recent W/R</a>
+      <br />
+      <table id="top50_table">
+        <thead>
+          <tr>
+            <th data-tsorter="numeric">#</th>
+            <th data-tsorter="link">Tank</th>
+            <th data-tsorter="numeric">Tier</th>
+            <th data-tsorter="numeric">Battles</th>
+            <th data-tsorter="numeric">DPG</th>
+            <th data-tsorter="numeric">FPG</th>
+            <th data-tsorter="numeric">W/R</th>
+            <th data-tsorter="numeric">Recent<br />Battles</th>
+            <th data-tsorter="numeric">Recent<br />DPG</th>
+            <th data-tsorter="numeric">Recent<br />W/R</th>
+          </tr>
+        </thead>
+        <tbody>
+        {{top50_stats|safe}}
+        </tbody>
+      </table>
+      {% else %}
+      {{top50_stats|safe}}
+      {% endif %}
+
+      {% set player_id = player_id|default(0) -%}
+
+      {% if not player_id == 0 %}
+      <script src="{{ url_for('static', filename='tank_info.js')}}"></script>
+      <script src="{{ url_for('static', filename='tsorter.min.js')}}" type="text/javascript"></script>
+      <script>
+        function table_sort_init() {
+          var table_sorter = tsorter.create('tank_stats');
+          var top50_sorter = tsorter.create('top50_table');
+        }
+
+        window.onload = table_sort_init;
+      </script>
+      <br />
+
+      <h3>Tanks with 50 or more battles:</h3>
+      <br />
+
+      <table id="tank_stats">
+        <thead>
+          <tr>
+            <th data-tsorter="link">Tank</th>
+            <th data-tsorter="numeric">Tier</th>
+            <th data-tsorter="numeric">Battles</th>
+            <th data-tsorter="numeric">DPG</th>
+            <th data-tsorter="numeric">FPG</th>
+            <th data-tsorter="numeric">W/R</th>
+            <th data-tsorter="numeric">DPG %</th>
+            <th data-tsorter="numeric">Recent<br />Battles</th>
+            <th data-tsorter="numeric">Recent<br />DPG</th>
+            <th data-tsorter="numeric">Recent<br />W/R</th>
+          </tr>
+        </thead>
+        <tbody>
+        {{player_stats|safe}}
+        </tbody>
+      </table>
+      {% endif %}
+    </section>
 {% endblock %}
