Fix tank page link for 150 dpg and server name

--- a/wot_scraper/templates/master.html
+++ b/wot_scraper/templates/master.html
@@ -18,7 +18,7 @@
 
   <body>
     <header>
-      <h1>dpg whores<sub id="beta"><a href="?server=na">NA</a> | EU soon</sub></h1>
+      <h1>dpg whores<sub id="beta"><a href="?server=na">NA</a> | <a href="?server=eu">EU</a></sub></h1>
       <span id="last_update">Last update: 30 Sep 22:53 EST</span>
     </header>
 
